docs: add remaining endpoints to swagger api
