# cmd/api/users.go
@@ -13,6 +13,18 @@ type userKey string
 
 const userCtx userKey = "user"
 
+// getUserHandler godoc
+//	@Summary		Get user by ID
+//	@Description	Get user by ID
+//	@Tags			users
+//	@Accept			json
+//	@Produce		json
+//	@Param			userID	path		int	true	"User ID"
+//	@Success		200		{object}	store.User
+//	@Failure		400		{object}	error
+//	@Failure		404		{object}	error
+//	@Failure		500		{object}	error
+//	@Router			/users/{ID} [get]
 func (app *application) getUserHandler(w http.ResponseWriter, r *http.Request) {
 	user := getUserFromContext(r)
 
@@ -25,6 +37,18 @@ type FollowUser struct {
 	UserID int64 `json:"user_id"`
 }
 
+// followUserHandler godoc
+//	@Summary		Follow a user
+//	@Description	Follow a user
+//	@Tags			users
+//	@Accept			json
+//	@Produce		json
+//	@Param			payload	body	FollowUser	true	"Follow User Payload"
+//	@Success		204
+//	@Failure		400	{object}	error
+//	@Failure		409	{object}	error
+//	@Failure		500	{object}	error
+//	@Router			/users/follow [post]
 func (app *application) followUserHandler(w http.ResponseWriter, r *http.Request) {
 	followerUser := getUserFromContext(r)
 
@@ -51,6 +75,18 @@ func (app *application) followUserHandler(w http.ResponseWriter, r *http.Request
 	}
 }
 
+// unfollowUserHandler godoc
+//	@Summary		Unfollow a user
+//	@Description	Unfollow a user
+//	@Tags			users
+//	@Accept			json
+//	@Produce		json
+//	@Param			payload	body	FollowUser	true	"Unfollow User Payload"
+//	@Success		204
+//	@Failure		400	{object}	error
+//	@Failure		409	{object}	error
+//	@Failure		500	{object}	error
+//	@Router			/users/unfollow [post]
 func (app *application) unfollowUserHandler(w http.ResponseWriter, r *http.Request) {
 	unFollowedUser := getUserFromContext(r)
 
